--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div id="app"></div>
-	<script src="src/index.tsx" type="module"></script>
+	<script src="src/index.ts" type="module"></script>
 </body>
 
 </html>
